update" git commit -m update git commit -m 'update

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
           <a class="nav-link" href="https://evan2801.github.io/barrysteintaxandaccounting/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:52330/contact.html">contact</a>
+          <a class="nav-link" href="http://localhost:52330/contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">about</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">services</a>
+            <a class="nav-link" href="#">Services</a>
           </li>
         
       </ul>
@@ -34,7 +34,7 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">contact</h1>
+          <h1 class="display-4"> Contact Info</h1>
           <p class="lead"></p>
         </div>
       </div>
@@ -43,11 +43,11 @@
 
     <section id="about me">
         
-        <h2>office number:</h2>
+        <h2>Office Number:</h2>
         <p>(973)-472-2264</p>
-        <h2>personal number:</h2>
+        <h2>Personal Number:</h2>
         <p>(646)-284-3377</p>
-        <h2>email:</h2>
+        <h2>Email Address:</h2>
         <p>bsteinaccountant@gmail.com</p>
 
  </div>
