--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           <a class="nav-link" href="https://evan2801.github.io/barrysteintaxandaccounting/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:52330/contact.html">contact</a>
+          <a class="nav-link" href="file:///Users/evanstein/Desktop/barrystein/contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">about</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">services</a>
+            <a class="nav-link" href="#">Services</a>
           </li>
        
       </ul>
