--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="https://evan2801.github.io/barrysteintaxandaccounting/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///Users/evanstein/Desktop/barrystein/contact.html">Contact</a>
+          <a class="nav-link" href="/Users/evanstein/Desktop/barrystein/contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
