--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/Users/evanstein/Desktop/barrystein/contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
