--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="services.html">Services</a>
               </li>
             
           </ul>
