--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
           <a class="nav-link" href="https://evan2801.github.io/barrysteintaxandaccounting/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Users/evanstein/Desktop/barrystein/contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
         
       </ul>
