--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Barry Stein Tax And Accountingd</title>
+    <title>Barry Stein Tax & Accountingd</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" >
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
     </div>
   </nav>
 <body>
-    <header>Barry Stein Tax And Accounting Services</header>
+    <header>Barry Stein Tax & Accounting Services</header>
 
     <div class="container"></div>
     <img src="barrystein.png" alt="taxcard" id="barry"></a>
@@ -42,7 +42,7 @@
 
     
         
-    <footer id= "copyright">© Barry Stein Tax And Accounting 1996 - 2020</footer>
+    <footer id= "copyright">© Barry Stein Tax & Accounting 1996 - 2020</footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" ></script>
