--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
 <body>
-    <div class="jumbotron jumbotron-fluid bg-success">
+    <div class="jumbotron jumbotron-fluid bg-primay">
         <div class="container">
           <h1 class="display-4"> Services</h1>
           <p class="lead"></p>
