--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
 
-      <div class="jumbotron jumbotron-fluid bg-success">
+      <div class="jumbotron jumbotron-fluid bg-primary">
         <div class="container">
           <h1 class="display-4">About</h1>
           <p class="lead"></p>
