--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
 <body>
-    <div class="jumbotron jumbotron-fluid bg-success">
+    <div class="jumbotron jumbotron-fluid bg-primary">
         <div class="container">
           <h1 class="display-4"> Contact Info</h1>
           <p class="lead"></p>
