--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
+        <li class="nav-item">
+            <a class="nav-link" href="http://newsletter.accountantsworld.com/tools/financial-calculators">Caculator</a>
+        </li>
        
       </ul>
     </div>
