--- a/services.html
+++ b/services.html
@@ -28,12 +28,16 @@
         <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://newsletter.accountantsworld.com/tools/financial-calculators">Caculator</a>
+        </li>
+        
         
       </ul>
     </div>
   </nav>
 <body>
-    <div class="jumbotron jumbotron-fluid bg-primay">
+    <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
           <h1 class="display-4"> Services</h1>
           <p class="lead"></p>
