--- a/about.html
+++ b/about.html
@@ -29,12 +29,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://newsletter.accountantsworld.com/tools/financial-calculators">Caculator</a>
+            </li>
             
           </ul>
         </div>
       </nav>
 
-      <div class="jumbotron jumbotron-fluid bg-primary">
+      <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
           <h1 class="display-4">About</h1>
           <p class="lead"></p>
