--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Barry Stein</a>
+    <h1 class="navbar-brand" href="#">Barry Stein</h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,10 +39,10 @@
 <body>
     <header>Barry Stein Tax & Accounting Services</header>
 
-    <div class="container"></div>
+    <div class="container">
     <img src="barrystein.png" alt="taxcard" id="barry"></a>
     <img src="1040.png" alt="taxform" id="form"></a>
-
+    </div>
     
         
     <footer id= "copyright">© Barry Stein Tax & Accounting 1996 - 2020</footer>
